# consumindo-api-vexpenses

./: README.md  pyproject.toml
anotacoes/: anotacoes.txt
notes/: notes.txt
src/: criar_executavel.py  excel_files.py  execution_options.py  file_header.py  functions.py  main.py
