[tool.poetry]
name = "integracaocomvexpenses"
version = "0.1.0"
description = "Programa para realizar integração com a API do VExpenses"
authors = ["Jonas Ferreira da Silva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
